CHANGES for THREDDS Data Server (TDS)
Version @VERSION.MINOR@
Build Date = @BUILDTIME@
Build Name = @BUILD.NAME@

Release Details 4.2:
 4.2.x (2011-03-xx)
   Fix tds/build.xml to directly reference catalina-ant.jar for Catalina deploy tasks (TDS-165).

 4.2.5 (2011-03-02)
   various opendap problems are fixed
   opendap ESG access control

 4.2.4 (2011-02-18)
   fix context path usage in InvDatasetFeatureCollection (TDS-144)
   ThreddsConfig uses serverStartup log
   Add latest ncISO to TDS distribution and update IDD and motherlode catalogs with ncISO services (TDS-159)
   Fix Godiva2 "permalink" and "email" links so they include dataset URL in "dataset" parameter (TDS-134)
   Add projection EPSG:3857 (used by GoogleMaps) to default CRS list used in WMS GetCapabilities documents (TDS-157)
   static catalogs: google search intitle:TdsStaticCatalog
   HTTPClient refactor / framework
   opendap bison parser
   Point FeatureCollection adds metadata to catalog
   sync bdb from TDS admin/debug
   remote fmrc collections
   ncss validate time range better
   ncss bug when time subsetting FMRC datasets - time_run axis was not getting subsetted.
   TomcatAuthorizer is appending "auth" to redirected URL, not sure why but it breaks opendap
   GridServlet (ncss) traps Throwable, not just Exception
   tom kunicki's patch on CdmrFeatureController
   change 404.jsp 500.jsp from 4.0 to 4.2
   GridCoordSys.getDateRange() now works for 2D time coord: WCS failed on FMRC 2D datase 
   MetadataManager.closeAll() bug
   fix default cache dir for WCS, ncss
   FMRC bug in constant offset datasets when offset didnt start at 0.
   FMRC now has vars, bounding box, and date range metadata correct.
   CdmrFeature service for point collections
   InvFeatureCollection type=POINT, STATION

 4.2.3 (2011-01-13)
   Fix for ArrayIndexOutOfBoundsException during WMS GetFeatureInfo requests on datasets without a time dimension (TDS-152)