@@ -6,6 +6,7 @@ Build Name = @BUILD.NAME@
 Release Details 4.2:
  4.2.x (2011-03-xx)
    Fix tds/build.xml to directly reference catalina-ant.jar for Catalina deploy tasks (TDS-165).
+   Fix TDS NCSS service so HTML form does not hardcode "/thredds" as the context path (TDS-167).
 
  4.2.5 (2011-03-02)
    various opendap problems are fixed
